@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.418 2005/10/16 21:10:03 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.419 2005/10/16 23:35:52 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
   16 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
   URI browser
+  added mirror selection
   src/GLIUtility.py:
   ls via ssh strips off ending *
 
